[gd_scene load_steps=2 format=3 uid="uid://c2vtjbhgn7t6r"]

[ext_resource type="Script" uid="uid://dahx6ue18iheb" path="res://main.gd" id="1_ig7tw"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="GenerateButton" type="Button" parent="."]
offset_left = 29.0
offset_top = 270.0
offset_right = 125.0
offset_bottom = 366.0

[node name="OrderLabel" type="Label" parent="."]
offset_left = 96.0
offset_top = 86.0
offset_right = 297.0
offset_bottom = 202.0

[node name="RecipeLabel" type="Label" parent="."]
offset_right = 8.0
offset_bottom = 23.0
